syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "Percolator.Grpc";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc Gimme (google.protobuf.Empty) returns (stream StreamMessage);
}

message HelloRequest {
  //string name = 1;
  message Payload {
    bytes publicKey = 1;
    int64 timeStampUnixMs = 2;
  }
  Payload payload = 2;
  bytes payloadSignature = 3;
}

message HelloReply {
  message Proceed {
    bytes publicKey = 1;
    bytes publicKeySignature = 2;
    bytes iv = 3;
    bytes encryptedSessionKey = 4;
  }

  message Busy {
    int64 notBeforeUnixMs = 1;
  }
  //string message = 1;
  oneof responseType {
      Proceed proceed = 2;
      Busy busy = 3;
      google.protobuf.Empty empty = 4;
  }  
}

message StreamMessage {
  repeated bytes bytes =1;
  int32 startIndex = 2;
}
